fix spacing

--- a/static/base.css
+++ b/static/base.css
@@ -38,8 +38,8 @@ h1 {
 h1, h2, h3 {
     font-family: var(--font-family-headers);
     color: var(--white);
-    margin:0;
-    padding:0;
+    margin: 0;
+    padding: 0;
 }
 
 h2 {
@@ -78,13 +78,13 @@ section {
     margin-bottom: 8rem;
 }
 
-section:nth-child(1){
-    margin:0
+section:nth-child(1) {
+    margin: 0
 }
 
 
 .above-fold--container {
-    flex-direction:column;
+    flex-direction: column;
     align-items: center;
     display: flex;
     justify-content: center;
@@ -98,8 +98,8 @@ section:nth-child(1){
     align-self: start;
     padding-top: 2rem;
     padding-bottom: 1rem;
-    height: calc(30vh - 2rem );
-    font-size: calc(((100vw + 100vh) /10));
+    height: calc(30vh - 2rem);
+    font-size: calc(((100vw + 100vh) / 10));
 
 }
 
@@ -109,7 +109,7 @@ section:nth-child(1){
     align-self: start;
     padding-top: 0;
     padding-bottom: 3rem;
-    height: 40vh ;
+    height: 40vh;
 }
 
 .above-fold--3 {
@@ -118,7 +118,7 @@ section:nth-child(1){
     align-self: start;
     padding-bottom: 1rem;
     height: 100%;
-    font-size: calc((23vh ) / 3.5);
+    font-size: calc((23vh) / 3.5);
     max-width: 60rem;
 }
 
@@ -126,7 +126,7 @@ section:nth-child(1){
     display: flex;
     align-items: center;
     align-self: start;
-    margin :0;
+    margin: 0;
     /*height: calc(10vh - 3rem);*/
     padding-bottom: 3rem;
     font-size: 2rem;
@@ -142,12 +142,12 @@ section:nth-child(1){
 }
 
 .footer {
-    height: 16vw;
+    height: 23vw;
     width: 100vw;
 }
 
-.text {
-    font-size: 15vw;
+.inlay {
+    font-size: 20vw;
     font-family: var(--font-family-decoration);
     font-weight: bolder;
     fill: var(--main-color);
@@ -191,11 +191,12 @@ section:nth-child(1){
         font-size: calc((20vh - 1rem) / 4);
         text-align: center;
     }
+
     .above-fold--4 {
         display: flex;
         align-items: center;
         align-self: center;
-        margin :0;
+        margin: 0;
         height: calc(10vh - 3rem);
         padding-bottom: 3rem;
         font-size: calc(80vw / 11);
@@ -218,4 +219,9 @@ section:nth-child(1){
         box-shadow: 0.1rem 0 0.5rem var(--main-color);
         clip-path: inset(0 0 -2rem 0);
     }
+}
+
+.copyright {
+    font-size: small;
+    text-align: center;
 }
